@@ -215,7 +215,7 @@
 	      <property name="yalign">0.5</property>
 	      <property name="xscale">1</property>
 	      <property name="yscale">1</property>
-	      <property name="top_padding">0</property>
+	      <property name="top_padding">5</property>
 	      <property name="bottom_padding">0</property>
 	      <property name="left_padding">12</property>
 	      <property name="right_padding">0</property>
